# naruhodo-transcripts

./: .coverage  .gitignore  .venv  DATA_LICENSE.md  LICENSE  README.md  pyproject.toml
data/: episode-index.md  episodes.json
docs/: diarization-setup.md  schema.md  transcript-quality.md
prompts/: diarization_quality_check.md  diarization_quality_check.txt  speaker_id_interview.md  speaker_id_regular.md
scripts/: create_index.py  enhance_episodes.py  migrate_filenames.py  parse_rss.py  quality_check.py  update_index.py  whisper_transcribe.py
src/: __init__.py  cli.py  config.py  diarization.py  downloader.py  index_generator.py  llm.py  logging_config.py  quality.py  rss_parser.py  transcript_quality.py  whisper.py  youtube_discovery.py
tests/: __init__.py  conftest.py  test_cli.py  test_downloader.py  test_index_generator.py  test_integration.py  test_logging_config.py  test_rss_parser.py  test_youtube_discovery.py
